337 Changing `Model Type` to `Model Provider`

--- a/.env.example
+++ b/.env.example
@@ -48,9 +48,9 @@ DEBUG_TRACEBACK=0  # During testing - Enable traceback to be included in error l
 CLEANED_TRACEBACK=0 # 1 = cleaned traceback in logs, 0 = full original traceback in logs
 
 # AGENT
-# MODEL_TYPE specifies which LLM provider to use for SQL generation
+# MODEL_PROVIDER specifies which LLM provider to use for SQL generation
 # Options: "azureopenai" (default), "anthropic", "gemini", "ollama"
-MODEL_TYPE=azureopenai
+MODEL_PROVIDER=azureopenai
 MAX_ITERATIONS=1
 MAX_TOOL_ITERATIONS=3
 MAX_QUERIES_LIMIT_FOR_REFLECT=10
