--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ dependencies = [
     "langgraph-checkpoint>=3.0.1",
     "langgraph-checkpoint-postgres>=3.0.2",
     "langsmith>=0.5.0",
-    "langchain-mistralain>=1.1.1",
+    "langchain-mistralai>=1.1.1",
     
     # OpenAI and Azure OpenAI
     "openai>=1.108.1,<2",
